<resources>
    <string name="app_name">Mantreads</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="x_books_read">"%s books read"</string>
    <string name="x_books_on_hand">"%s books on hand"</string>
    <string name="point">POINT</string>
    <string name="shared">SHARED</string>
    <string name="read_books">READ BOOKS</string>
    <string name="books_on_hand">BOOKS ON HAND</string>
    <string name="read">READ</string>
    <string name="unverified_user">UNVERIFIED USER</string>
    <string name="reading">Reading</string>
    <string name="opened_to_share">Opened to share</string>
    <string name="closed_to_share">Closed  to share</string>
    <string name="on_road">On road</string>
    <string name="lost">Lost</string>
    <string name="pass_through">PASS THROUGH</string>
    <string name="x_added">%s added the book</string>
    <string name="x_started_to_read_this_book">%s started to read the book</string>
    <string name="x_finished_to_read">%s finished to read the book</string>
    <string name="x_closed_sharing">%s closed sharing for the book</string>
    <string name="x_opened_sharing_for_this_book">%s opened sharing for the book</string>
    <string name="x_took">%s took the book</string>
    <string name="x_sent_the_book_to_y">%1$s sent the book to %2$s</string>
    <string name="book_sent_from_x_to_y_and_its_lost">Book lost while %1$s sending the book to %2$s!</string>
    <string name="x_sent_request_to_y">%1$s sent request to %2$s</string>
    <string name="x_accepted_ys_request">%1$s accepted %2$s\'s request</string>
    <string name="x_rejected_ys_request">%1$s rejected %2$s\'s request</string>
    <string name="search_book_hint">Search for books, users and genres…</string>
    <string name="type_message">Type a message…</string>
    <string name="pick_image_intent_text">Pick Image</string>
    <string name="desc">description</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">rePassword</string>
    <string name="start_reading">Start Reading!</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="had_an_account_but">Had an account but</string>
    <string name="empty_field_message">This field can not be empty!</string>
    <string name="invalid_email_address">Invalid email address!</string>
    <string name="password_must_be_longer_than">Password must be longer than %d!</string>
    <string name="password_must_be_shorter_than">Password must be shorter than %d!</string>
    <string name="passwords_must_be_same">Passwords must be same!</string>
    <string name="please_wait">Please wait…</string>
    <string name="email_taken">This email is already in use</string>
    <string name="email_not_found">This email not exists in %s</string>
    <string name="false_combination">Wrong password</string>
    <string name="unknown_error">Problem here… Please try again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="pick_image_for_book">Please pick an image for book</string>
    <string name="select_genre">Please select genre</string>
    <string name="genre">Genre</string>
    <string name="author">Author</string>
    <string name="book_name">Book name</string>
    <string name="add_image">Add Image</string>
    <string name="creating_book">Creating book…</string>
    <string name="book_has_created">Your book has created!</string>
    <string name="state_prompt_reading">I am reading this book</string>
    <string name="state_prompt_open_to_share">I want to share this book</string>
    <string name="state_prompt_closed_to_share">Just add this book</string>
    <string name="permission_request_message">Grant permissions to add new book</string>
    <string name="action_more">Settings</string>
    <string name="introduction_page_1_title">Welcome to Mantreads!</string>
    <string name="introduction_page_1_desc">A user based book share platform.</string>
    <string name="introduction_page_2_title">Share and read</string>
    <string name="introduction_page_2_desc">Take and read which you want inside of million books.</string>
    <string name="introduction_page_3_title">Save trees</string>
    <string name="introduction_page_3_desc">Book can read thousands times. Share your books for beautiful planet.</string>
    <string name="start_now">Start now</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="loved_genres_title">Genres you love?</string>
    <string name="action_notification">Notification</string>
    <string name="loading">Loading…</string>
    <string name="empty_state">Nothing to see here…</string>
    <string name="request_button">request</string>
    <string name="requests">REQUESTS</string>
    <string name="state_duration">for %d days</string>
    <string name="state_today">within today</string>
    <string name="select_location">Select Location</string>
    <string name="ok">OK</string>
    <string name="open_to_share">Open to share</string>
    <string name="close_to_share">Close to share</string>
    <string name="hour_short">%dh</string>
    <string name="day_short">%dd</string>
    <string name="week_short">%dw</string>
    <string name="minute_short">%dm</string>
    <string name="month_short">%dmo</string>
    <string name="year_short">%dy</string>
    <string name="now">now</string>
    <string name="arrived">Arrived</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="finish_reading_prompt">Has your reading finished?</string>
    <string name="start_reading_prompt">Do you want to start reading this book right now?</string>
    <string name="owner_change_notification">Cogratulations! You are the new owner of this book now.</string>
    <string name="requests_rejected_prompt">All requests for this book will be rejected!</string>
    <string name="finished">Finished</string>
    <string name="reject_all">Reject all!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="arrived_prompt">Has the book come to your hand?</string>
    <string name="i_get_the_book">I get the book</string>
    <string name="you_added">You added the book</string>
    <string name="you_started_to_read">You started to read the book</string>
    <string name="you_finished_to_read">You finished to read the book</string>
    <string name="you_closed_sharing">You closed sharing for the book</string>
    <string name="you_opened_sharing">You opened sharing for the book</string>
    <string name="you_took">You took the book</string>
    <string name="you_sent_the_book_to_x">You sent the book to %s</string>
    <string name="book_lost_while_on_road_to_x_if_mistake_z">Book lost while you sending the book to %s</string>
    <string name="x_sent_the_book_to_you">%s sent the book to you</string>
    <string name="book_lost_while_x_sending_to_you_if_mistake_z">Book lost while %s sending the book to you</string>
    <string name="you_sent_request">You sent request to %s</string>
    <string name="you_accepted_request">You accepted %s\'s request</string>
    <string name="you_rejected_request">You rejected %s\'s request</string>
    <string name="x_sent_request_to_you">%s sent request to you</string>
    <string name="x_accepted_your_request">%s accepted your request</string>
    <string name="x_rejected_your_request">%s rejected your request</string>
    <string name="x_requested_for_y">%1$s requested for %2$s</string>
    <string name="x_now_owned_by_y">%1$s now owned by %2$s</string>
    <string name="x_lost_y">%1$s lost %2$s</string>
    <string name="x_accepted_your_request_for_y">%1$s accepted your request for %2$s</string>
    <string name="x_rejected_your_request_for_y">%1$s rejected your request for %2$s</string>
    <string name="genres">Genres</string>
    <string name="books">Books</string>
    <string name="users">Users</string>
    <string name="genre_value_1">Science fiction</string>
    <string name="genre_value_2">Satire</string>
    <string name="genre_value_3">Drama</string>
    <string name="genre_value_4">Action</string>
    <string name="genre_value_5">Adventure</string>
    <string name="genre_value_6">Romance</string>
    <string name="genre_value_7">Mystery</string>
    <string name="genre_value_8">Horror</string>
    <string name="genre_value_9">Self help</string>
    <string name="genre_value_10">Health</string>
    <string name="genre_value_11">Guide</string>
    <string name="genre_value_12">Travel</string>
    <string name="genre_value_13">Religion</string>
    <string name="genre_value_14">Children\'s</string>
    <string name="genre_value_15">Science</string>
    <string name="genre_value_16">History</string>
    <string name="genre_value_17">Math</string>
    <string name="genre_value_18">Anthology</string>
    <string name="genre_value_19">Poetry</string>
    <string name="genre_value_20">Encyclopedias</string>
    <string name="genre_value_21">Dictionaries</string>
    <string name="genre_value_22">Comics</string>
    <string name="genre_value_23">Art</string>
    <string name="genre_value_24">Cookbooks</string>
    <string name="genre_value_25">Diaries</string>
    <string name="genre_value_26">Journals</string>
    <string name="genre_value_27">Prayer books</string>
    <string name="genre_value_28">Series</string>
    <string name="genre_value_29">Trilogy</string>
    <string name="genre_value_30">Biographies</string>
    <string name="genre_value_31">Autobiographies</string>
    <string name="genre_value_32">Fantasy</string>
    <string name="nothing_to_show">Search for books, users and genres.</string>
    <string name="no_result_found">No results found</string>
    <string name="nothing_to_show_book_and_profile">Nothing to show here.</string>
    <string name="delete_prompt_message_user">Delete chat with %s?</string>
    <string name="delete_prompt_conversation_message_single">Delete message from %s?</string>
    <string name="delete_prompt_conversation_message_multiple">Delete %1$d messages from %2$s?</string>
    <string name="x_messages_selected">%d selected</string>
    <string name="action_delete">Delete</string>
    <string name="delete">Delete</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="send">Send</string>
    <string name="report">Report</string>
    <string name="report_hint_user_additional_info">Tell us anything about your problem…</string>
    <string name="not_any_of_above">Not any of above…</string>
    <string name="report_user_not_book_giver">This user is not giving book to anyone.</string>
    <string name="report_user_annoying_messages">This user is annoying with messages.</string>
    <string name="report_user_inappropriate_content">This user is producing inappropriate content.</string>
    <string name="report_user_wrong_location">This users location is wrong.</string>
    <string name="report_user_wrong_name">This users name is wrong.</string>
    <string name="block">Block</string>
    <string name="add_book">Add your favorite book to Mantreads!</string>
    <string name="search_book">Search your most wanted book!</string>
    <string name="existing_book">Select a book that exists in your profile!</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="forgot_password_info">We will send temporary password to your email. Don\'t forget to look your spam mail inbox. You can change your password in your profile settings anytime.</string>
</resources>