<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CurrentUserProfileSettingsActivity">

    <include
        android:id="@+id/noConnectionView"
        layout="@layout/item_empty_state"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/settingsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:text="@string/report"
                android:textAllCaps="true"
                android:textColor="@color/primaryTextColor"
                android:textSize="14sp"/>

            <RadioGroup
                android:id="@+id/reportUserRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/reportUserWrongName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/secondaryTextColor"
                    android:padding="8dp"
                    android:text="@string/report_user_wrong_name"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/reportUserWrongLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/secondaryTextColor"
                    android:padding="8dp"
                    android:text="@string/report_user_wrong_location"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/reportUserInappropriateContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/secondaryTextColor"
                    android:padding="8dp"
                    android:text="@string/report_user_inappropriate_content"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/reportUserMessageSpam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/secondaryTextColor"
                    android:padding="8dp"
                    android:text="@string/report_user_annoying_messages"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/reportUserNotBookGiver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/secondaryTextColor"
                    android:padding="8dp"
                    android:text="@string/report_user_not_book_giver"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/reportUserOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/secondaryTextColor"
                    android:padding="8dp"
                    android:text="@string/not_any_of_above"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/reportUserEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="top"
                    android:hint="@string/report_hint_user_additional_info"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="3"
                    android:padding="12dp"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/secondaryTextColor"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/reportSendButton"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:clickable="false"
                    android:text="@string/send"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryTextColor"
                    android:visibility="visible"/>

            </RadioGroup>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.13"
                android:background="@color/primaryTextColor"/>

            <Button
                android:id="@+id/blockButton"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="24dp"
                android:text="@string/block"
                android:textAllCaps="true"
                android:textColor="@color/error_red"
                android:textSize="16sp"/>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
